--- a/package.json
+++ b/package.json
@@ -64,7 +64,9 @@
     "link-list": "npm ls --depth=0 --link=true"
   },
   "dependencies": {
-    "execa": "^8.0.1"
+    "execa": "^8.0.1",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.8.3"
   },
   "optionalDependencies": {
     "@percy/cypress": "^3.1.1",
