--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "link-list": "npm ls --depth=0 --link=true"
   },
   "dependencies": {
+    "axios": "^1.7.7",
     "execa": "^8.0.1",
     "jodit-react": "^4.1.2",
     "jspdf": "^2.5.1",
